feat: abstract api definition to manage native apis