@@ -16,18 +16,14 @@
 package io.gravitee.definition.model.v4.plan;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.fasterxml.jackson.annotation.JsonProperty;
 import io.gravitee.definition.model.Plugin;
+import io.gravitee.definition.model.v4.flow.AbstractFlow;
 import io.gravitee.definition.model.v4.flow.Flow;
 import io.swagger.v3.oas.annotations.media.Schema;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import java.io.Serializable;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.*;
+import lombok.experimental.SuperBuilder;
 
 /**
  * @author Guillaume LAMIRAND (guillaume.lamirand at graviteesource.com)
@@ -35,73 +31,22 @@ import lombok.*;
  */
 @NoArgsConstructor
 @AllArgsConstructor
-@Builder(toBuilder = true)
+@SuperBuilder(toBuilder = true)
 @Getter
 @Setter
 @ToString
-@EqualsAndHashCode
+@EqualsAndHashCode(callSuper = true)
 @Schema(name = "PlanV4")
-public class Plan implements Serializable {
-
-    @JsonProperty(required = true)
-    @NotBlank
-    private String id;
-
-    @JsonProperty(required = true)
-    @NotBlank
-    private String name;
-
-    private PlanSecurity security;
-
-    @JsonProperty(required = true)
-    @NotNull
-    private PlanMode mode;
-
-    private String selectionRule;
+public class Plan extends AbstractPlan {
 
     private List<Flow> flows;
 
-    private Set<String> tags;
-
-    @JsonProperty(required = true)
-    @NotNull
-    private PlanStatus status;
-
     @JsonIgnore
-    public final boolean isSubscribable() {
-        return (
-            (
-                this.getSecurity() != null &&
-                this.getSecurity().getType() != null &&
-                !"KEY_LESS".equalsIgnoreCase(this.getSecurity().getType())
-            ) ||
-            usePushMode()
-        );
-    }
-
-    @JsonIgnore
-    public final boolean usePushMode() {
-        return this.getMode() != null && this.getMode() == PlanMode.PUSH;
-    }
-
-    @JsonIgnore
-    public final boolean useStandardMode() {
-        return this.getMode() != null && this.getMode() == PlanMode.STANDARD;
-    }
-
-    @JsonIgnore
-    public final boolean isApiKey() {
-        return (
-            this.getSecurity() != null &&
-            ("API_KEY".equalsIgnoreCase(this.getSecurity().getType()) || "api-key".equalsIgnoreCase(this.getSecurity().getType()))
-        );
-    }
-
-    @JsonIgnore
+    @Override
     public List<Plugin> getPlugins() {
         return Optional
             .ofNullable(this.flows)
-            .map(f -> f.stream().filter(Flow::isEnabled).map(Flow::getPlugins).flatMap(List::stream).collect(Collectors.toList()))
+            .map(f -> f.stream().filter(AbstractFlow::isEnabled).map(AbstractFlow::getPlugins).flatMap(List::stream).toList())
             .orElse(List.of());
     }
 }
